--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <button type="submit" class="btn btn-info">Add item</button>
         <button type="button" class="btn btn-primary" id="button">Add list</button>
       </form>
-      <p id="list"></p>
+      <ul id="list">
+      </ul>
     </div>
   </body>
 </html>
